--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 <body>
     <!-- This is my first HTML page for Lab 01 -->
 
-
     <h1>Welcome to 224 Web Technologies Course</h1>
-
     <h2>This is an experimental change</h2>
     
+    <section>
+        <button onclick="showMessage()">Click Me</button>
+    </section>
+
+    <!-- JS -->
+    <script src="js/script.js"></script>
+
 </body>
 </html>
